--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nodules-requestid",
+  "name": "requestid",
   "version": "0.1.0",
   "description": "X-Request-Id signer for Node.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha -u bdd -R spec test.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,8 @@
     "istanbul": "^0.3.5",
     "jscs": "1.4.x",
     "jshint": "~2.3.0",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "supertest": "^0.15.0"
   },
   "engine": {
     "node": ">=0.10"
